--- a/code/rabbitmq-app/src/main/resources/application.yml
+++ b/code/rabbitmq-app/src/main/resources/application.yml
@@ -12,7 +12,9 @@ spring:
 logging:
   level:
     root: INFO
+    org.springframework.amqp.rabbit.listener.ConditionalRejectingErrorHandler: ERROR
     #org.springframework.context.annotation: DEBUG
     #com.example.rabbitmqapp: DEBUG
   pattern:
+    # add "${HOSTNAME}" to get log related host/docker
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %5p ${HOSTNAME} ${PID:- } --- [%15.15t] %-40.40logger{39} : %m%n"
